--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -31,6 +31,7 @@
    ],
    "source": [
     "\n",
+    "rows=5\n"
     "count = 5\n",
     "for i in range(0, count):\n",
     "    for j in range(0, i + 1):\n",
